[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["Jacqueline Grecco, <jacquelinegrecco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.2"
blue = "^0.9.1"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.9.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.15"
pymdown-extensions = "^10.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.taskipy.tasks]
lint = "blue --check . && isort --check-only ."
format = "isort . && blue ."
test = "poetry run pytest -v"
doc = "mkdocs serve"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i:8000)"